# mulle-bashfunctions

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  Makefile  Makefile.shellcheck  README.md  RELEASENOTES.md  install.sh  installer  mulle-bash  mulle-bashfunctions  mulle-bashfunctions-embed  mulle-bashfunctions-env  mulle-bashfunctions.sublime-project  mulle-bootstrap-gcc.sh
.github/workflows/: ci.yml  semgrep.yml
.mulle/etc/project/: formula-info.sh  generate-formula.sh  post-release.sh  pre-release.sh  publisher-info-prerelease.sh  version-info.sh
asset/dox/: TOC.md
cola/: api.md.bud  description.md.bud  executables.md.bud  info.md.bud  packages.plist  properties.plist  usage.md.bud
cola/wilted/: install.md.bud
mulle-project/: formula-info.sh  generate-formula.sh  version-info.sh
src/: embed-all-footer.sh  embed-all-header.sh  embed-footer.sh  embed-header.sh  embed-minimal-footer.sh  embed-minimal-header.sh  header.sh  mulle-array.sh  mulle-base64.sh  mulle-bashfunctions-all-embed.sh  mulle-bashfunctions-all.sh  mulle-bashfunctions-embed.sh  mulle-bashfunctions-embed.sh.gz.base64  mulle-bashfunctions-minimal-embed.sh  mulle-bashfunctions-minimal.sh  mulle-bashfunctions-none.sh  mulle-bashfunctions.sh  mulle-bashglobal.sh  mulle-bashloader.sh  mulle-boot.sh  mulle-case.sh  mulle-compatibility.sh  mulle-etc.sh  mulle-exekutor.sh  mulle-file.sh  mulle-functions.sh  mulle-init.sh  mulle-legacy.sh  mulle-logging.sh  mulle-options.sh  mulle-parallel.sh  mulle-path.sh  mulle-snip.sh  mulle-sort.sh  mulle-string.sh  mulle-url.sh  mulle-usage.sh  mulle-version-qualifier.sh  mulle-version.sh  test-compute-relative.sh  (+3 more)
src/mulle-nat/bash-script/project/all/: ONESHOT_NAME  ONE_SHOTNAME
src/mulle-nat/file.sh/project/all/: ONESHOT_FILENAME
templates/: CMakePackage.txt.scion
test/: run-test
test/01-relative/: run-test
test/02-symlink-relative/: run-test
test/03-simplify/: run-test
test/04-symlink/: run-test
test/05-array/: run-test
test/06-path/: run-test
test/07-concat/: run-test
test/08-filepath_concat/: run-test
test/09-filepath_cleaned/: run-test
test/10-basename/: run-test
test/11-dirname/: run-test
test/12-inplace-sed/: run-test
test/13-escape/: run-test
test/14-exekutor/: run-test
test/15-stringops/: run-test
test/16-eval-print/: run-test
test/17-expanded-string/: run-test
test/18-find/: run-test
test/19-reverse/: run-test
test/20-count/: run-test
test/21-parallel/: run-test
test/22-logging/: run-test
test/23-include/: run-test
test/24-url/: run-test
test/25-case/: run-test
test/26-uuidgen/: run-test
test/27-base64/: run-test
test/28-dir-contents/: run-test
test/29-sleep/: run-test
test/30-cores/: run-test
test/31-same-files/: run-test
test/32-file-size/: run-test
test/33-lso/: run-test
test/34-mod-time/: run-test
test/35-dir-empty/: run-test
test/36-mkdir/: run-test
test/37-merge/: run-test
test/38-tmpdir/: run-test
test/39-hash/: run-test
test/40-split/: run-test
test/41-colon-remove/: run-test
test/42-comma-remove/: run-test
test/43-line-ops/: run-test
test/44-concat-ops/: run-test
test/45-string-ops/: run-test
test/46-escape-ops/: run-test
test/47-misc-string/: run-test
tests/: run-test  run-test.sh
tests/01-relative/: run-test
tests/03-simplify/: run-test.sh
tests/04-symlink/: run-test
tests/05-array/: run-test
tests/06-path/: run-test  run-test.sh
tests/07-concat/: run-test
tests/08-filepath_concat/: run-test
tests/10-basename/: run-test
tests/11-dirname/: run-test
